@@ -68,9 +68,11 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     class allocator<void>;
 #endif
 
+#if __cplusplus >= 201103L
   /// Declare uses_allocator so it can be specialized in \<queue\> etc.
   template<typename, typename>
     struct uses_allocator;
+#endif
 
   /// @} group memory
 
